# p-one_noise

./: .gitignore  README.md
Coincidence_analysis/parsing/: README  makelinks.sh  removelinks.sh
Coincidence_analysis/parsing/coincidences/: find_preparsed_coincs.py  submit_script.sh
Coincidence_analysis/parsing/datafiles/: file.0  file.1  file.10  file.100  file.1000  file.1001  file.1002  file.1003  file.1004  file.1005  file.1006  file.1007  file.1008  file.1009  (+3033 more)
G4/: README
G4/absorption/: CMakeLists.txt  k40coinc.cc  makeLinks.sh
G4/acceptance_sim/: CMakeLists.txt  K40accept.cc
G4/glass40/: CMakeLists.txt  scint.cc
G4/glass40/glass_Match/: data_match.sh
G4/glass40/glass_Match/glass_ms/: ms0.txt  ms1.txt  ms100.txt  ms104.txt  ms107.txt  ms108.txt  ms110.txt  ms111.txt  ms112.txt  ms114.txt  ms116.txt  ms117.txt  ms118.txt  ms119.txt  ms12.txt  ms120.txt  ms121.txt  ms122.txt  ms123.txt  ms125.txt  ms127.txt  ms128.txt  ms129.txt  ms13.txt  ms130.txt  ms131.txt  ms134.txt  ms135.txt  ms137.txt  ms138.txt  ms14.txt  ms141.txt  ms142.txt  ms143.txt  ms145.txt  ms146.txt  ms15.txt  ms150.txt  ms152.txt  ms154.txt  (+247 more)
Notebooks/: README
Notebooks/Coincidence_analysis/: Arrival Time.ipynb  Parsed Analysis.ipynb  oldPocam.ipynb  oldPocam.txt
Notebooks/G4/: Angular Acceptance.ipynb  Calculate Veff.ipynb  Match Sim to Data.ipynb  Photon Energies.ipynb  QE script.ipynb  Simulated Coincidences.ipynb
make_pdfs/: README
make_pdfs/scripts/: make_pdfs.py  make_pdfs.sh  make_pdfs2.sh  make_pdfs3.sh  run.sh
modules/: HamamatsuQE.txt  README  coincidence.py
(+14790 files in other folders)
